k8s-orchestration/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blaster
  namespace: selfservice
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    app: blaster
    project: selfservice
    department: devex
    component: blaster
    scrape-service-metrics: "true"
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: blaster

---

apiVersion: v1
kind: Service
metadata:
  name: blaster-lb
  namespace: selfservice
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
  labels:
    app: blaster-lb
    project: selfservice
    department: devex
    component: blaster-lb
    scrape-service-metrics: "true"
spec:
  ports:
  - name: external
    protocol: TCP
    port: 80
    targetPort: web
  - name: external-4200
    protocol: TCP
    port: 4200
    targetPort: web    
  selector:
    app: blaster
  type: LoadBalancer
