k8s-orchestration/base/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blaster
  namespace: selfservice
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  labels:
    project: selfservice
    department: devex
spec:
  rules:
    - host: internal.hellman.oxygen.dfds.cloud
      http:
        paths:
          - path: /blaster
            backend:
              serviceName: blaster
              servicePort: web
    - host: build.dfds.cloud
      http:
        paths:
          - backend:
              serviceName: blaster
              servicePort: web
